--- a/client/partials/timerods.html
+++ b/client/partials/timerods.html
@@ -5,26 +5,26 @@
             <a class="roomlinks" href="#/timerods">ODS</a>
         </div>
         <div  class="col-xs-1 col-xs-offset-9">
-            <input id="ringer" type="button" class="btn btn-secondary"/>
+            <input timer-directive id="ringer" attr="notif_sound_ods" type="button" class="btn btn-secondary"/>
         </div>
     </div>
 		<div class = "row">
 			<div id="top" class="col-xs-12">
 				<h1 id="header">Operation Dream State</h1>
                 <div id="clockbox">
-                    <div class="clock">
+                    <div id="apwclock" flip-clock>
                     
                     </div>
                     
                 </div>
                 <div class="form-inline" id="buttonbox">
-                    <input class="btn btn-secondary" type="button" value="Start" id="cd_start" />
+                    <input class="btn btn-secondary" type="button" value="Start" id="cd_start" ng-click="startClock()"  />
                     <!-- <input class="btn btn-secondary" type="button" value="Pause" id="cd_pause" /> -->
-                    <input class="btn btn-secondary" type="button" value="Pause"  id="cd_stop" />
-                    <input class="btn btn-secondary" type="button" value="Reset" id="cd_reset" />
+                    <input class="btn btn-secondary" type="button" value="Pause"  id="cd_stop" ng-click="stopClock()" />
+                    <input class="btn btn-secondary" type="button" value="Reset" id="cd_reset" ng-click="resetClock()" />
                     <div class="form-group" >
                         <label id="setsecs">Set Minutes:</label>
-                        <input class="form-control" type="text" value="60" id="cd_seconds" />
+                        <input class="form-control" type="text" value="60" id="cd_seconds" ng-model="min" ng-change="changeMin()"/>
                     </div>
                 </div>
                 <div class="row" id="audioarea">
@@ -32,7 +32,7 @@
                         <div class="form-inline">
                             <div class="form-group">
                                 <label id="setvol">Volume:</label>
-                                <input class="form-control" type="text" value="100" id="cd_volume">
+                                <input class="form-control" type="text" ng-model="volume" ng-change="changeVol()" value="100" id="cd_volume">
                             </div>
                             
                         </div>
@@ -41,8 +41,8 @@
                     </div>
     
                     <div class="col-xs-2 col-xs-offset-7">
-                        <input class="btn btn-secondary" type="button" value="MSG1" id="btn_msg1" />
-                        <input class="btn btn-secondary" type="button" value="MSG2" id="btn_msg2" />
+                        <input timer-directive class="btn btn-secondary" type="button" value="MSG1" id="btn_msg1" />
+                        <input timer-directive class="btn btn-secondary" type="button" value="MSG2" id="btn_msg2" />
                     </div>    
                     
                 </div>
@@ -50,146 +50,7 @@
 			</div>
         <div class="row">
             <div id="bottom" >
-                <textarea class="col-xs-12" rows="6" cols="160" id="hints">HINTS...</textarea>
+                <textarea class="col-xs-12" ng-model="hints" ng-change="updateHints()" rows="6" cols="150" id="hints"></textarea>
             </div>
         </div>
 </div>
-<script type="text/javascript">
-        $(document).ready(function(){
-            // console.log($scope.user);
-            var socket = io.connect();  
-            socket.emit("check_clock_time_ods");
-            // var pwmsg1 = document.createElement('audio');
-            // pwmsg1.setAttribute('src','pwmsg1.mp3');
-            // var pwmsg2 = document.createElement('audio');
-            // pwmsg2.setAttribute('src', 'pwmsg2.mp3');
-            // var pwba = document.createElement('audio');
-            // pwba.setAttribute('src', 'pwba.mp3');
-            // var notification = document.createElement('audio');
-            // notification.setAttribute('src', 'notif.mp3');
-
-            
-
-            // $('#hints').change(function(){
-            //     alert("CHANGED");
-            // });
-            var clock = $('.clock').FlipClock({countdown:true, autoStart:false, clockFace: 'MinuteCounter'
-                // setCountdown(true);
-            })
-            clock.setTime(3600);
-
-            //SOCKET FUNCTIONS
-            socket.on('checkClock_ods', function(data){
-                console.log("ODS DATA ON LOAD");
-                console.log("TIME - ", data.time);
-                console.log("CLOCK ON - ", data.clockon);
-                // console.log(data.time);
-                // console.log(data.clockon);
-                clock.setTime(data.time);
-                if(data.clockon == true){
-                    clock.start();
-                }
-                $('#hints').html(data.hints);
-            });
-
-            socket.on('update_hints_ods', function(data){
-                console.log(data);
-                $('#hints').html(data);
-            });
-
-            socket.on('startClock_ods', function(data){
-                // if($('#cd_seconds').val() != 60){
-                //     pwba.currentTime = $('#cd_seconds').val()*60;
-                // }
-                // pwba.play();
-                clock.start(function(){
-                    // console.log(clock.getTime().time);
-                    socket.emit('updateTime_ods', {time: clock.getTime().time})
-                    })
-            })
-
-            socket.on('stopClock_ods', function(data){
-                // pwba.pause();
-                clock.stop();
-            })
-
-            socket.on('resetClock_ods', function(data){
-                // pwba.pause();
-                // pwba.currentTime = 0;
-                clock.stop();
-                clock.setTime(3600);
-                $('#cd_seconds').val(60);
-                $('#hints').html("HINTS...");
-            })
-
-            socket.on('changeTime_ods', function(data){
-                $('#cd_seconds').val(data)
-                clock.setTime($('#cd_seconds').val()*60);
-            })
-
-            // socket.on('playPWmsg1', function(data){
-            //     pwmsg1.play();
-            // })
-
-            socket.on('volumeChange_ods', function(data){
-                // pwba.volume = data;
-                $('#cd_volume').val(data * 100);
-                console.log(pwba.volume);
-            })
-
-            // socket.on('playNotif', function(data){
-            //     notification.play();
-            // })
-
-            $('#audio').on('click', function(){
-                console.log('clicked');
-            })
-
-            $('#hints').on('keyup', function(){
-                socket.emit('new_hint_ods', {hint: $('#hints').val()})
-            })
-
-            $('#btn_msg1').click(function(){
-                socket.emit('play_pwmsg1_ods');
-            })
-
-            $('#btn_msg2').click(function(){
-                socket.emit('play_pwmsg2_ods');
-            })
-
-
-            // $('#hintbtn').on('click',function(){
-            //     console.log($('#hints').val())
-            //     socket.emit('new_hint', {hint: $('#hints').val()})
-            // })
-
-            $('#cd_start').on('click',function(){
-                socket.emit('start_clock_ods');
-
-            });
-
-            $('#cd_volume').on('change', function(){
-                var vol = 100;
-                if($('#cd_volume').val() < 100){
-                    vol = $('#cd_volume').val();
-                }
-                socket.emit('change_volume_ods', {volume: vol})
-            })
-
-            $('#cd_seconds').on('change', function(){
-                socket.emit('change_time_ods', {time: $('#cd_seconds').val()});
-            })
-
-            $('#ringer').on('click', function(){
-                socket.emit('notif_sound_ods');
-            })
-
-            $('#cd_stop').on('click', function(){
-                socket.emit('stop_clock_ods');
-            })
-
-            $('#cd_reset').on('click', function(){
-               socket.emit('reset_clock_ods');
-            })
-        })
-    </script>
