fixed volume bugs

--- a/client/partials/timera.html
+++ b/client/partials/timera.html
@@ -50,7 +50,7 @@
                         <div class="form-inline">
                             <div class="form-group">
                                 <label id="setvol">Volume:</label>
-                                <input class="form-control"  type="text" value="100" id="cd_volume">
+                                <input class="form-control" ng-model="volume" ng-change="changeVol()" type="text" value="100" id="cd_volume">
                             </div>
                             
                         </div>
