--- a/client/partials/timerods.html
+++ b/client/partials/timerods.html
@@ -1,4 +1,4 @@
-<div ng-controller="timerController">
+<div ng-controller="odstimerController">
 	<div id="ringerbtn" class="row">
         <div class="col-xs-2">
             <a class="roomlinks" href="#/timera">PW</a>
